[package]
name = "tiny-http-ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tiny_http = {version = "0.1.0"}
ascii = "1.1.0"
rand = "0.8.4"
lazy_static = "1.4.0"

[dependencies.tiny_http]
version = "0.12"
path = "../tiny-http"

[lib]
name = "tiny_http_ios"
crate-type = ["staticlib"]
